--- a/packs/ir.pyabr.sample/data/usr/share/samples/sample.html
+++ b/packs/ir.pyabr.sample/data/usr/share/samples/sample.html
@@ -5,6 +5,6 @@
         <meta charset="utf-8"/>
     </head>
     <body>
-        <p>Welcome to Pyabr with HTML markup language.</p>
+        <p>Welcome to Pyabr with HyperText markup language.</p>
     </body>
 </html>
